{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 299,
  "lineage": "0daa3925-d9fc-ec04-8498-df115edfe725",
  "resources": [
    {
      "module": "module.elastic_load_balancer",
      "mode": "managed",
      "type": "aws_elb",
      "name": "techTest-ELB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:821496245564:loadbalancer/techTest-ELB",
            "availability_zones": [
              "eu-west-2a",
              "eu-west-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "techTest-ELB-521000146.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "techTest-ELB",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "techTest-ELB",
            "security_groups": [
              "sg-0b925654d55ff345a"
            ],
            "source_security_group": "821496245564/elb_sg",
            "source_security_group_id": "sg-0b925654d55ff345a",
            "subnets": [
              "subnet-092ca5335ab8bf2bb",
              "subnet-0d1ca3782f94a9c4a"
            ],
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security_group_deployment.aws_security_group.techTest-SG-elb",
            "module.vpc_deployment.aws_subnet.techTest-subnet1",
            "module.vpc_deployment.aws_subnet.techTest-subnet2",
            "module.vpc_deployment.aws_vpc.techTest-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "techTest-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:821496245564:internet-gateway/igw-075eacfd1879eae08",
            "id": "igw-075eacfd1879eae08",
            "owner_id": "821496245564",
            "vpc_id": "vpc-0c325fdf7732aba57"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.techTest-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "techTest-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e1b01e8f72382b60",
            "owner_id": "821496245564",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075eacfd1879eae08",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c325fdf7732aba57"
          },
          "dependencies": [
            "module.vpc_deployment.aws_internet_gateway.techTest-igw",
            "module.vpc_deployment.aws_vpc.techTest-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techTest-rta-s1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d284e30b59087003",
            "route_table_id": "rtb-0e1b01e8f72382b60",
            "subnet_id": "subnet-0d1ca3782f94a9c4a"
          },
          "dependencies": [
            "module.vpc_deployment.aws_internet_gateway.techTest-igw",
            "module.vpc_deployment.aws_route_table.techTest-rt",
            "module.vpc_deployment.aws_subnet.techTest-subnet1",
            "module.vpc_deployment.aws_vpc.techTest-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techTest-rta-s2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030e5e870c57a58d3",
            "route_table_id": "rtb-0e1b01e8f72382b60",
            "subnet_id": "subnet-092ca5335ab8bf2bb"
          },
          "dependencies": [
            "module.vpc_deployment.aws_internet_gateway.techTest-igw",
            "module.vpc_deployment.aws_route_table.techTest-rt",
            "module.vpc_deployment.aws_subnet.techTest-subnet2",
            "module.vpc_deployment.aws_vpc.techTest-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techTest-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:821496245564:security-group/sg-0d309a3f50780c031",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d309a3f50780c031",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9966,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9966
              }
            ],
            "name": "techTest-SG",
            "name_prefix": null,
            "owner_id": "821496245564",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c325fdf7732aba57"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.techTest-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techTest-SG-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:821496245564:security-group/sg-0b925654d55ff345a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b925654d55ff345a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": null,
            "owner_id": "821496245564",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c325fdf7732aba57"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.techTest-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techTest-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:821496245564:subnet/subnet-0d1ca3782f94a9c4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0d1ca3782f94a9c4a",
            "map_public_ip_on_launch": true,
            "owner_id": "821496245564",
            "vpc_id": "vpc-0c325fdf7732aba57"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.techTest-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techTest-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:821496245564:subnet/subnet-092ca5335ab8bf2bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-092ca5335ab8bf2bb",
            "map_public_ip_on_launch": true,
            "owner_id": "821496245564",
            "vpc_id": "vpc-0c325fdf7732aba57"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.techTest-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "techTest-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:821496245564:vpc/vpc-0c325fdf7732aba57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0be894f19571434a8",
            "default_route_table_id": "rtb-00de2ab1550ece9a1",
            "default_security_group_id": "sg-0b7995d35a0e05ac8",
            "dhcp_options_id": "dopt-51c99639",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c325fdf7732aba57",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00de2ab1550ece9a1",
            "owner_id": "821496245564",
            "tags": {
              "Name": "test"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}